--- a/index.html
+++ b/index.html
@@ -11,31 +11,82 @@
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfolio</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao ativo">fazer faculdade</button>
+            <button class="botao">guardar dinheiro</button>
+            <button class="botao">completar o ensino medio</button>
+            <button class="botao">ler 10 livros</button>
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
-                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal">fazer faculdade</h3>
+                <h4 class="aba-conteudo-titulo-secundario">2024-12-24/h4>
                 <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                <div class="contador"></div>
+                <h3 class="aba-conteudo-titulo-principal">guardar dinheiro</h3>
+                <h4 class="aba-conteudo-titulo-secundario">2024-08-17</h4>
+                <div class="contador"></div
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias0">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas0">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min0">7</p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg0">7</p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
+                  </div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal">completar o ensino medio</h3>
+                <h4 class="aba-conteudo-titulo-secundario">2024-11-12</h4>
                 <div class="contador"></div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias1">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas1">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min1">7</p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg1">7</p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
+                    </div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
-                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <h3 class="aba-conteudo-titulo-principal">ler 10 livros</h3>
+                <h4 class="aba-conteudo-titulo-secundario">2025-01-01</h4>
                 <div class="contador"></div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="dias3">7</p>
+                            <p class="contador-digito-texto">dias</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="horas3">7</p>
+                            <p class="contador-digito-texto">horas</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="min3">7</p>
+                            <p class="contador-digito-texto">min</p>
+                        </div>
+                        <div class="contador-digito">
+                            <p class="contador-digito-numero" id="seg3">7</p>
+                            <p class="contador-digito-texto">seg</p>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
@@ -43,3 +94,4 @@
     <script src="main.js"></script>
 </body>
 </html>
+
