--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button class="botao ativo">fazer faculdade</button>
             <button class="botao">guardar dinheiro</button>
             <button class="botao">completar o ensino medio</button>
-            <button class="botao">ler 10 livros</button>
+            <button class="botao">comprar um carro</button>
         </div>
         <div class="abas-textos">
             <div class="aba-conteudo ativo">
@@ -67,7 +67,7 @@
                     </div>
             </div>
             <div class="aba-conteudo">
-                <h3 class="aba-conteudo-titulo-principal">ler 10 livros</h3>
+                <h3 class="aba-conteudo-titulo-principal">comprar um carro</h3>
                 <h4 class="aba-conteudo-titulo-secundario">2025-01-01</h4>
                 <div class="contador"></div>
                         <div class="contador-digito">
